--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,900&subset=latin-ext');
+@import "~font-awesome/css/font-awesome.css";
+body
+{
+  background-color: rgb(240, 240, 240);
+  font-family: 'Lato', sans-serif;
+}
